k8s/c1/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: boa
  labels:
    app.kubernetes.io/part-of: bank-of-anthos
    cluster: c1
