k8s/c1/04-accounts-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: accounts-db
  namespace: boa
  labels:
    application: bank-of-anthos
    team: accounts
    tier: db
spec:
  ports:
    - name: tcp
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: accounts-db
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: accounts-db
  namespace: boa
  labels:
    application: bank-of-anthos
    team: accounts
    tier: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts-db
  serviceName: accounts-db
  template:
    metadata:
      labels:
        app: accounts-db
        application: bank-of-anthos
        team: accounts
        tier: db
    spec:
      containers:
        - name: accounts-db
          image: us-central1-docker.pkg.dev/bank-of-anthos-ci/bank-of-anthos/accounts-db:v0.6.10@sha256:d95c4094c75f69069b915ef3adc99a8f95e43077885140cdeeb90d807ea74eff
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: 250m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdb
              subPath: postgres
      serviceAccountName: bank-of-anthos
      volumes:
        - name: postgresdb
          emptyDir: {}
