k8s/c1/05-userservice.yaml
# Adapted from upstream userservice.yaml — namespaced, no other changes.
# userservice signs JWTs (needs the private key) and reads/writes accounts-db.

apiVersion: v1
kind: Service
metadata:
  name: userservice
  namespace: boa
  labels:
    application: bank-of-anthos
    team: accounts
    tier: backend
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: userservice
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  namespace: boa
  labels:
    application: bank-of-anthos
    team: accounts
    tier: backend
spec:
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
        application: bank-of-anthos
        team: accounts
        tier: backend
    spec:
      containers:
        - name: userservice
          image: us-central1-docker.pkg.dev/bank-of-anthos-ci/bank-of-anthos/userservice:v0.6.10@sha256:d8c4412edc46ab105000f721788b73301651cc43b19cee7e7302739f81882dcc
          ports:
            - containerPort: 8080
              name: http-server
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 10
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 260m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["all"]
            privileged: false
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /tmp/.ssh
              name: keys
              readOnly: true
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccountName: bank-of-anthos
      terminationGracePeriodSeconds: 5
      volumes:
        - name: tmp
          emptyDir: {}
        - name: keys
          secret:
            secretName: jwt-key
            items:
              - key: jwtRS256.key
                path: privatekey
              - key: jwtRS256.key.pub
                path: publickey
