k8s/c1/06-contacts.yaml
# Adapted from upstream contacts.yaml — namespaced, no other changes.

apiVersion: v1
kind: Service
metadata:
  name: contacts
  namespace: boa
  labels:
    application: bank-of-anthos
    team: accounts
    tier: backend
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: contacts
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contacts
  namespace: boa
  labels:
    application: bank-of-anthos
    team: accounts
    tier: backend
spec:
  selector:
    matchLabels:
      app: contacts
  template:
    metadata:
      labels:
        app: contacts
        application: bank-of-anthos
        team: accounts
        tier: backend
    spec:
      containers:
        - name: contacts
          image: us-central1-docker.pkg.dev/bank-of-anthos-ci/bank-of-anthos/contacts:v0.6.10@sha256:90d47594270e64f8dafa6da52c89ff70c2483cca0821dff2cc38b1450ac7a6b9
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 10
          resources:
            limits:
              cpu: 250m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["all"]
            privileged: false
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /tmp/.ssh
              name: publickey
              readOnly: true
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccountName: bank-of-anthos
      terminationGracePeriodSeconds: 5
      volumes:
        - name: tmp
          emptyDir: {}
        - name: publickey
          secret:
            secretName: jwt-key
            items:
              - key: jwtRS256.key.pub
                path: publickey
